--- a/src/main/resources/templates/User/V3/profile.html
+++ b/src/main/resources/templates/User/V3/profile.html
@@ -139,7 +139,7 @@
             </li>
 
             <li class="sidebar-item">
-              <a class="sidebar-link" href="#">
+              <a class="sidebar-link" href="/user-saved">
                 <i class="align-middle" data-feather="bookmark"></i>
                 <span class="align-middle">Bài viết đã lưu</span>
               </a>
