Update Code Login Register

--- a/src/main/resources/static/css/login&register.css
+++ b/src/main/resources/static/css/login&register.css
@@ -42,7 +42,7 @@
   margin: 15px 0 10px;
 }
 .container button {
-  background-color: #1e1e63;
+  background-color: #4caf68;
   color: #fff;
   font-size: 12px;
   padding: 10px 45px;
@@ -167,9 +167,9 @@
   border-radius: 0 150px 100px 0;
 }
 .toggle {
-  background-color: #1e1e63;
+  background-color: #4caf68;
   height: 100%;
-  background: linear-gradient(to right, #1e1e63, #1e1e63);
+  background: linear-gradient(to right, #4caf68, #4caf68);
   color: #fff;
   position: relative;
   left: -100%;
