Update Code ChangePassword

--- a/src/main/resources/templates/User/register.html
+++ b/src/main/resources/templates/User/register.html
@@ -80,17 +80,12 @@
                     </label>
                 </div>
 
-                <button type="submit" id="signUpButton2" >Sign Up</button>
+                <button type="submit" id="signUpButton2" >Đăng kí</button>
                 <a href="/auth/login">Đã có tài khoản? Đăng Nhập Ngay</a>
             </div>
         </form>
-        <span class="or-divider text-center">Or use your email for register</span>
 
-        <div class="social-icons">
-            <a href="" class="icon"><img src="/img/photos/google.png" alt="" />Sign in with Google</a>
-            <a href="" class="icon"><img src="/img/photos/facebook.png" alt="" />Sign in with Facebook</a>
-        </div>
-        </form>
+
     </div>
     <div class="form-container sign-in">
         <form action="/auth/user" method="post" >
@@ -111,14 +106,9 @@
                     <small> I agree to </small> <a href="">terms &amp;amp; policy </a>
                 </label>
             </div>
-            <button type="submit" id="signUpButton1" >Sign Up</button>
+            <button type="submit" id="signUpButton1" >Đăng kí</button>
             <a href="/auth/login">Đã có tài khoản? Đăng Nhập Ngay</a>
-            <span class="text-center">Or use your email for register</span>
 
-            <div class="social-icons">
-                <a href="" class="icon"><img src="/img/photos/google.png" alt="" />Login with Google</a>
-                <a href="" class="icon"><img src="/img/photos/facebook.png" alt="" />Login with Facebook</a>
-            </div>
         </form>
     </div>
     <div class="toggle-container">
