--- a/src/main/resources/templates/fragments/home.html
+++ b/src/main/resources/templates/fragments/home.html
@@ -421,7 +421,7 @@
                     <div class="job-listing-logo">
                         <img th:src="${job?.companyLogoUrl != null && !#strings.isEmpty(job.companyLogoUrl)
 ? '/uploads/logocompany/' + job.companyLogoUrl
-: '/img/user.jpg'}" class="img-fluid">
+: '/img/avatars/user.jpg'}" class="img-fluid">
                     </div>
 
                     <div class="job-listing-about d-sm-flex custom-width w-100 justify-content-between mx-4">
