--- a/src/main/resources/templates/fragments/job-single.html
+++ b/src/main/resources/templates/fragments/job-single.html
@@ -638,7 +638,7 @@
             <div class="job-listing-logo">
               <img th:src="${job?.companyLogoUrl != null && !#strings.isEmpty(job.companyLogoUrl)
 ? '/uploads/logocompany/' + job.companyLogoUrl
-: '/Admin/images/person_3.jpg'}" class="img-fluid">
+: '/img/avatars/user.jpg'}" class="img-fluid">
             </div>
 
             <div class="job-listing-about d-sm-flex custom-width w-100 justify-content-between mx-4">
